--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
